--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -44,9 +44,7 @@
 <!--    </div>-->
 
     <div class="breadcrumb">
-		<a href="#">全部分类</a>
-		<span>&gt;</span>
-		<a href="#">书店区</a>
+		<a href="index.html">首页</a>
 		<span>&gt;</span>
 		<a href="#">书籍信息</a>
 	</div>
