--- a/src/main/resources/static/pay.html
+++ b/src/main/resources/static/pay.html
@@ -14,9 +14,10 @@
         <div class="to">
             <p>网罗天下图书 传承中华文明</p>
             <ul>
-                <li><a href="gouwu.html">购物车</a></li>
-                <li><a href="zuce.html">注册</a></li>
-                <li><a href="denglu.html">登陆</a></li>
+				<li><a href="gouwu.html">购物车</a></li>
+				<li><a href="userself.html">个人主页</a></li>
+<!--                <li><a href="zuce.html">注册</a></li>-->
+<!--                <li><a href="denglu.html">登陆</a></li>-->
             </ul>
         </div>
         <div class="clearit"></div>
